<resources>
    <string name="app_name">WeCast Together</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE Casts</string>
    <string name="backdrop_subtitle">This week top 10 channels</string>
    <string name="title_activity_enter">EnterActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_latest_cast">LatestCastActivity</string>

    <string name="email">Your Email</string>
    <string name="type_email">Type your email</string>
    <string name="password">Your Password</string>
    <string name="type_password">Type your password</string>
    <string name="login_button">login</string>
    <string name="please_register">If you are not registered yet please register</string>
    <string name="login_field_empty_alert">Please enter both your email and password!</string>


</resources>


